Redesign footer payment badges

--- a/nerin_final_updated/frontend/components/np-footer.html
+++ b/nerin_final_updated/frontend/components/np-footer.html
@@ -39,7 +39,9 @@
 
       <div class="np-footer__meta">
         <div class="np-footer__social" hidden></div>
-        <div class="np-footer__badges" hidden></div>
+        <section class="np-footer__payments" hidden aria-label="Métodos de pago y envío">
+          <ul class="np-footer__payment-list"></ul>
+        </section>
         <div class="np-footer__legal" hidden></div>
       </div>
     </div>
